<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SlideShow</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_folder">Choose folder</string>
    <string name="action_settings">Settings</string>
    <string name="start_time">Start time</string>
    <string name="stop_time">Stop time</string>
    <string name="interval">Interval</string>
    <string name="go">Go!</string>
    <string name="save">Save</string>
    <string name="choose_start_time">Choose start time</string>
    <string name="choose_stop_time">Choose stop time</string>
    <string name="no_folder_selected">No folder selected!</string>
    <string name="no_time_selected">Time is not set!</string>
    <string name="one_sec">1 sec.</string>
    <string name="general">GENERAL</string>
    <string name="image_folder">Image folder</string>
    <string name="scheduled_start">SCHEDULED START</string>
    <string name="schedule_settings">Schedule settings</string>
    <string name="schedule_start_summary">App will start in time</string>
    <string name="schedule_start_title">Scheduled start</string>
    <string name="start_after_reboot">Start after reboot</string>
    <string name="start_after_reboot_summary">App will start every time after device reboot</string>
    <string name="start_when_power_connected">Start when power connected</string>
    <string name="start_when_power_connected_summary">App will start when power connected</string>
    <string name="autostart">AUTOSTART</string>

</resources>
